# helix

./: Cargo.toml  languages.toml
helix-plugin/: Cargo.toml
helix-plugin-auto-darkmode/: Cargo.toml
helix-plugin-auto-darkmode/src/: lib.rs
helix-plugin/src/: lib.rs
helix-term/: Cargo.toml
helix-term/src/: application.rs  commands.rs  compositor.rs  lib.rs  plugins.rs
helix-term/src/ui/: editor.rs
helix-test-plugin/: Cargo.toml
helix-test-plugin/src/: lib.rs
